# ds-u2-actividad-1-listasenlazadassimples-santiagoeuresti

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
arduino_simulador/: arduino_simulador.ino
include/: ListaSensor.h  Nodo.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h
src/: SensorBase.cpp  SensorPresion.cpp  SensorTemperatura.cpp  main.cpp
